修改了几张图，增加第二章相关技术部分。

--- a/tex/enl2sql.tex
+++ b/tex/enl2sql.tex
@@ -285,7 +285,7 @@ $||$表示列表展开；$COND_{-1}$表示在列表中的上一个元素；
 
 
 
-\subsection{解决的一些问题}
+\subsection{过滤条件顺序问题和隐式列名问题}
 \label{enl2sql:ndo}
 
 在前文中，我们做出过一个假设，即每个自然语言问题都只会对应一条SQL查询语句，并且每个查询语句都只会对应一个正确的动作序列。
@@ -359,7 +359,7 @@ WikiSQL虽然在SQL语法上的覆盖范围比之前的数据集（例如，ATIS
 其中执行准确性是我们优化的关键指标。
 
 
-\subsection{实现细节}
+\subsection{实验设置}
 在数据预处理过程中，我们大量借鉴了[！！引用！！]的方法对数据进行处理。
 在词嵌入层(embedding layer)在训练集中出现至少两次的单词才会被保留在词汇表(vocabulary)中，剩下的将被赋予特殊的输入单元“UNK”。
 我们使用已经训练好的Glove词嵌入[！！引用！！]并且可以在我们的模型训练时对词嵌入进行继续训练，该词嵌入的维度为16维。
