--- a/tex/interaction.tex
+++ b/tex/interaction.tex
@@ -88,27 +88,27 @@
 % A: 烦请在模板的\href{https://github.com/sjtug/SJTUThesis}{github主页}点击“Star”，我想粗略统计一下使用学位论文模板的人数，谢谢大家。非常欢迎大家向项目贡献代码。
 
 
-\chapter{基于映射的INLI2SQL生成}
+\chapter{基于映射的INL2SQL生成}
 \label{chap:interaction}
 \section{研究问题}
 
 一直以来，自然语言接口是人机交互领域的终极追求，也是人机交互、机器学习领域专家孜孜不倦钻研学习的热门问题。
-交互式自然语言接口生成SQL查询语句（INLI2SQL）的关键问题就是怎样使得我们的系统能在与用户的多轮交互之下理解到用户的查询意图，并结合数据库直接生成符合查询意图的SQL语句返回给用户。
+交互式自然语言接口生成SQL查询语句（INL2SQL）的关键问题就是怎样使得我们的系统能在与用户的多轮交互之下理解到用户的查询意图，并结合数据库直接生成符合查询意图的SQL语句返回给用户。
 其主要过程为：用户首先输入自然语言查询语句以及给出对应的数据库表模式，系统接收到输入后判断输入的正确性并和用户产生多轮交互，在交互完成并确认输出有效后将对应的SQL查询语句及执行结果输出。
 % 因此，本章将对从自然语言生成SQL语句的技术和模型进行探究，尝试寻找一种解决方案，能提供自然语言接口给非技术用户，让用户通过以自然语言表达的查询意图，得到目标SQL语句。
 
 \begin{figure}[!htp]
   \centering
-  \includegraphics[width=15cm]{example/nli.pdf}
+  \includegraphics[width=18cm]{example/nli.pdf}
   \bicaption[这里将出现在插图索引中]
-    {基于映射的INLI2SQL生成示例}
+    {基于映射的INL2SQL生成示例}
     {English caption}
   \label{fig:NLI}
 \end{figure}
 
 
 
-图\ref{fig:NLI}中给出了基于映射的INLI2SQL生成中的典型的例子。
+图\ref{fig:NLI}中给出了基于映射的INL2SQL生成中的典型的例子。
 用户首先输入自然语言查询语句“Return the altitude of Willis Tower in Chicago”以及给出对应的数据库表模式（包含表、列名等）。
 系统判断出两个有效过滤条件即‘Name’=‘Willis Tower ’和‘Location’=‘Chicago’但不确认聚合函数是否为‘SELECT’及其对象是否为‘Height(ft)’。系统返回一个包含{‘Name’=‘Willis Tower ’; ‘Location’=‘Chicago’}和{‘select’=[‘Height(ft)’,’Floor’,’Year’]}的交互项。
 其中{‘Name’=‘Willis Tower ’; ‘Location’=‘Chicago’}为json格式并表示为已经确认的信息，{‘select’=[‘Height(ft)’,’Floor’,’Year’]}为json格式表示需要用户在‘Height(ft)’,’Floor’,’Year’中做出选择。
@@ -122,8 +122,33 @@
 
 
 \section{相关技术}
-\subsection{相关技术1}
-\subsection{相关技术2}
+% \subsection{相关技术1}
+% \subsection{相关技术2}
+在软件产品的开发与使用过程中，非专家用户常常会在指定的关系型数据库上使用关键字搜索[！！引用！！]来进行实时的查询。
+所以近段时间以来，有很多的研究人员对关键字搜索领域进行研究[！！引用！！]。
+关键字搜索的目的不是通过输入的关键字的集合来找到与这些关键字相关联的数据，而是通过这些关键字来推测并解析出其背后想要表达的查询意图及对应的自然语言。
+在这些研究中，有的方法通过聚合函数[！！引用！！]、布尔运算符[！！引用！！]、查询语句片段[！！引用！！]等方式对关键字进行拓展。
+现在看来，这些研究内容是解决自然语言查询这一挑战的奠基者。
+本章所提出的解决方案能够支持更加丰富的查询，使得用户可以使用语义更加复杂的语句进行查询。
+
+数据库的自然语言接口（NLIDB）已经被研究人员研究了很长的时间[！！引用！！]。
+早期的NLIDB需要依靠为每个数据库单独定制的手工语法来进行查询，这些手工语法的拓展性很差，很难在其他数据库中进行使用。
+相比之下，本章所提出的解决方案以生成SQL查询语句作为目的，具有很好的通用性，可以被移植到其他的数据库上使用。
+ 
+如[！！引用！！]所指出，NLIDB在使用上最大的问题在于其所依赖的信息很有限，正常的自然语言往往是没有一个固定的格式和语义。
+这也就导致了NLIDB无法准确地推断用户输入的查询意图。
+为了解决可靠性的问题，[！！引用！！]等人采用了PRECISE方法，将输入的自然语言查询划分为语义更加容易被解析的查询片段，并将这些查询片段更为精确地转换为SQL查询语句。
+但是，PRECISE无法处理那些语义不确切或者难以处理的自然语言查询。
+相比而言，本章提出的解决方案通过与用户的多轮交互，可以较好地解决语义不明确的问题。
+
+也有很多文献[！！引用！！]提出过交互式NLIDB的想法，早期交互式NLIDB[！！引用！！]主要目标在于从查询生成对应的结果。
+而NaLIX[！！引用！！]则更进一步，当用户的查询超出模型的语义理解能力的范围之外时会把相应的重构查询的建议返回给用户，这种策略会大大减少用户在使用时对其查询进行重构的负担。
+然而，NaLIX对输入的查询超过模型的语义理解能力的处理方式不太正确。
+而在本章提出的解决方案中，对于给定的自然语言查询语句，我们会与用户多轮交互并向用户解释我们解析的过程以及生成SQL的过程，从而对查询进行重构，解决起义问题。
+所以，在与用户的多轮反馈与交互下，用户在使用我们的系统时可以放心地输入较为复杂的查询，其生成的SQL查询语句可以包含多级聚合操作、嵌套以及各种类型的连接操作等。
+
+总而言之，本章提出的解决方案具有较好的通用性，能够解决语义不明确的问题，可以通过与用户的多轮交互向用户解释我们解析的过程以及生成SQL的过程从而对查询进行重构。
+
 \section{解决方案}
 \begin{figure}[!htp]
     \centering
