第四章正文梳理，每章本章小结、总结与展望、图表名索引

--- a/tex/summary.tex
+++ b/tex/summary.tex
@@ -8,8 +8,71 @@
 %%==================================================
 \chapter{总结与展望}
 \label{chap:conculution}
-\section{本文工作小结}
+\section{本文贡献}
+
+随着IT和互联网技术的发展，关系型数据库和数据库技术被广泛地使用并作为数据存储的主要方式。
+越来越多的软件技术人员和业务人员需要使用SQL查询语句从数据库中获得所需的信息。
+然而，掌握SQL语言需要使用者经过数据库和SQL相关知识的培训，且在使用时需要确切了解数据库的模式等信息。
+如果可以让使用者通过交互式的自然语言接口甚至直接使用自然语言来对数据库执行查询将大大缩短业务与技术的鸿沟，极大地提升软件的生产效率。
+在此背景下，本文对SQL查询语句的生成技术进行了研究，提出了基于映射的INL2SQL生成、基于深度强化学习的NL2SQL生成和基于多任务学习的NL2SQL生成三种解决方案。
+
+本文的主要贡献和创新点包括：
+
+\textbf{1)交互式自然语言接口生成SQL查询语句的方法}
+
+本文提出了交互式自然语言接口生成SQL语句模型的设计和具体实现，基本思想是结合自然语言解析技术，使用人机交互的方式指导解析过程。
+通过依赖解析树生成、解析树节点映射、解析树优化重构、查询树翻译模块对用户输入的查询进行意图的解析并映射到SQL查询语句上。
+通过交互式对话器和用户接口模块对意图解析和映射进行补充和重构。
+减少了自然语言解析中出现的歧义问题和错误情况，提升了准确性。
+
+
+\textbf{2)英文自然语言生成SQL查询语句的方法}
+
+本文提出了一种基于深度强化学习的NL2SQL生成的解决方案。
+在离线训练阶段，将WikiSQL中的数据进行序列表示后输入给网络模型，模型生成SQL查询语句后在数据库中执行，再使用奖励函数构造奖励用于强化网络模型。
+在在线生成阶段用户输入自然语言查询语句及数据库模式，训练好的网络模型将生成符合用户查询意图的SQL查询语句。
+我们把其中最重要的网络模型称为“增强解析器”模型，它由编码器和解码器构成并结合了自注意力机制。
+参考强化学习的基本范式，本文将增强解析器学习的目标转换为策略的优化问题并对给出了解析器的状态和动作的定义。
+为了解决SQL查询语句中的过滤条件的顺序问题以及隐式列名的问题，本文还提出了非确定性预言和$ANYCOL$状态的解决办法。
+在与目前NL2SQL领域的前沿方法进行对比以及在不同数据集上的实验结果证明了本文方法的有效性与前瞻性。
+
+\textbf{3)中文自然语言生成SQL查询语句的方法}
+
+为了进一步提高NL2SQL生成的准确性以及解决中文自然语言生成SQL查询语句的问题，本文还提出了一种基于多任务学习的NL2SQL生成的解决方案。
+为了解决输入一致性的问题，本文首先提出使用TCR模板对中文自然语言转换为英文自然语言任务和英文自然语言转换为SQL查询语句任务进行统一。
+再使用由编码器和解码器构成的多任务网络模型。
+其中，编码过程包含单独编码、对准、对偶协同注意力、压缩、自注意力和最终编码阶段；
+解码过程包含结果表示、自注意力、获得中间状态、任务与内容注意力、获得任务与内容状态、多指针生成阶段。
+本文进行了多任务网络的实验、不同优化策略下的实验、应用在更多的任务上的实验结果证明了本文方法不仅能够提升英文自然语言生成SQL查询语句任务的准确性，还能够很好地完成中文自然语言生成SQL语言任务，同时还具有很好地可拓展性。
+
 \section{展望}
+
+由于时间和能力有限，可以在以下几个方面做进一步的研究和改进：
+
+\textbf{1)交互式自然语言接口生成SQL查询语句的泛化能力}
+
+从本文的实验结果可以看出，模型存在无法处理子查询、所需输入的自然语言意图形式较固定、无法处理特殊词组等问题，需要进一步进行提升和改进。
+可以考虑使用深度学习进行语义分类、命名实体识别等手段辅助进行意图的提取。
+还可以采用将深度学习和模块化的工程相结合的方法，提升系统对于子查询的处理能力。
+除此之外，本文的交互方法较为简单，接下来还可以考虑将任务型问答系统的相关技术（例如，槽填充技术）运用在与用户的多轮交互中，从而更好地解决歧义和信息缺失的问题。
+
+
+\textbf{2)复杂SQL语句的自动生成}
+
+本文及其他最新的研究工作所使用到的数据集都是以WikiSQL数据集为主，而WikiSQL数据属于spider数据集中定义的简单和中等难度。
+本文提出的解决方案已经几乎达到简单和中等难度的SQl查询语句生成的最佳性能，之后的模型需要更多地考虑解决语句的多样性和复杂性。
+可以通过分析困难和极难难度的SQL查询语句的特性来设计新的更复杂的神经网络结构，可以考虑将深度学习和模块化的工程相结合的办法解决单个神经网络无法解决的问题。
+另外，SQL查询语句只是SQL语句中结构最简单、语义最清楚的一种，而范围更大的SQL语句的自动生成任务是更具挑战的。
+
+\textbf{3)中文自然语言生成SQL查询语句}
+
+除了英文自然语言生成SQL查询语句之外，中文自然语言生成SQL查询是更具难度的。
+首先，目前还没有从中文自然语言生成SQL查询语句的训练数据集，今后的研究可以先构造出这样的数据集。
+同时，由于数据库表模式往往使用的是英文甚至是英文缩写，这也很大程度的提高了这个研究领域的难度。
+其次，本文使用了多任务的网络同时学习中英翻译和英文生成SQL两个任务的解决方案，在一定程度上解决了中文生成SQl语句的问题。
+但是，随着查询语句变得复杂和冗长、SQl语句格式更长更深的时候，研究者还需要找到两者存在的更多共性从而解决问题。
+
+
 
 % \begin{summary}
 
