--- a/thesis.tex
+++ b/thesis.tex
@@ -60,7 +60,7 @@
 \listofalgorithms
 \addcontentsline{toc}{chapter}{\listalgorithmname}  % 将算法目录加入全文目录
 
-\include{tex/symbol} % 主要符号、缩略词对照表
+% \include{tex/symbol} % 主要符号、缩略词对照表
 
 \mainmatter % 使用阿拉伯数字对正文编号
 
@@ -112,7 +112,7 @@
 \fi
 
 % \include{tex/patents}     % 申请专利
-\include{tex/resume}      % 个人简历
+% \include{tex/resume}      % 个人简历
 
 \makeatother
 
